# Ares1

./: .clangd  .gitignore
Simulator/: .clangd  .gitignore  CMakeLists.txt  README.md
Simulator/docs/: ARES-1_Cpp_Simulation_Core_Development_Guide_NASA_Telemetry_Crew_Vitals_v3.md
Simulator/include/: Action.hpp  ActionExecutor.hpp  CrewMember.hpp  CrewPhysiologyModel.hpp  Simulation.hpp  SimulationMetrics.hpp  SimulationState.hpp  ValidationResult.hpp
Simulator/src/: MathUtils.cpp  ResourceModel.cpp
Simulator/tests/: CMakeLists.txt  test_actions.cpp  test_atmosphere.cpp  test_crew_physiology.cpp  test_json_io.cpp  test_math_utils.cpp  test_operations.cpp  test_power.cpp
backend/: .env.example  .gitignore  NVIDIA_NIM_CONTRACT.md  NVIDIA_PLANNER_CONTRACT.md  PHASE_3_CONTRACT_AUDIT.md  README.md  RELEASE_GATE.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py  sse.py
backend/app/core/: config.py  errors.py  logging.py
backend/app/integrations/: __init__.py  nvidia_nim.py
backend/app/schemas/: __init__.py  actions.py  api.py  common.py  crew.py  embedding.py  mission.py  plan.py  planner.py  planning.py  planning_validation.py  replay.py  result.py  retrieval.py  retrieval_query.py  run.py  telemetry.py
backend/app/services/: embedding_index.py  embedding_provider.py  mission_lifecycle_service.py  mission_plan_simulation_service.py  mission_planning_service.py  mission_retrieval_query.py  planner_candidate_validator.py  planner_prompt.py  planner_provider.py  planning_attempt_store.py  planning_validation_store.py  procedure_corpus.py  procedure_embedding_index_builder.py  procedure_embedding_index_store.py  procedure_retrieval.py  replay_clock.py  run_store.py  scenario_registry.py  session_store.py  simulation_service.py  simulator_client.py  telemetry_replay_service.py
backend/scripts/: build_procedure_embedding_index.py  validate_procedure_corpus.py
backend/tests/: conftest.py
backend/tests/helpers/: __init__.py  fake_processes.py
backend/tests/integration/: test_app_startup.py  test_health.py  test_malformed_output.py  test_mission_real_simulator.py  test_mission_restart.py  test_mission_routes.py  test_planning_real_e2e.py  test_planning_route.py  test_release_failure_paths.py  test_release_security.py  test_result_retrieval.py  test_retrieval_real_nim.py  test_retrieval_route.py  test_sim_baseline.py  test_sim_concurrency.py  test_sim_determinism.py  test_sim_errors.py  test_sim_rejected_plan.py  test_sim_timeout.py  test_sim_valid_plan.py  test_simulator_client_real_cli.py  test_sse_replay.py
backend/tests/unit/: test_action_schema.py  test_api_schema.py  test_config.py  test_crew_schema.py  test_embedding_index.py  test_embedding_schema.py  test_error_mapping.py  test_fixture_hashes.py  test_logging.py  test_mission_lifecycle_service.py  test_mission_plan_simulation_service.py  test_mission_planning_service.py  test_mission_retrieval_query.py  test_mission_schema.py  test_nvidia_nim.py  test_plan_schema.py  test_planner_candidate_validator.py  (+28 more)
tests/: CMakeLists.txt  test_actions.cpp  test_atmosphere.cpp  test_crew_physiology.cpp  test_json_io.cpp  test_power.cpp  test_simulation.cpp  test_thermal.cpp  test_validator.cpp
(+48 files in other folders)
